[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/icon.png" type="Texture" id=1]
[ext_resource path="res://Script/Balle.gd" type="Script" id=2]
[ext_resource path="res://Script/Game.gd" type="Script" id=3]
[ext_resource path="res://Script/RaquetteIA.gd" type="Script" id=4]
[ext_resource path="res://Script/Raquette.gd" type="Script" id=5]
[ext_resource path="res://Scene/Raquette.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="Raquette" parent="." instance=ExtResource( 6 )]
position = Vector2( 247.794, 742.168 )
script = ExtResource( 5 )

[node name="RaquetteIA" parent="." instance=ExtResource( 6 )]
position = Vector2( 249.13, 26.6946 )
script = ExtResource( 4 )

[node name="Balle" type="KinematicBody2D" parent="."]
position = Vector2( 255.133, 385.575 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Balle"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Balle"]
shape = SubResource( 1 )

[node name="Terrain" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terrain"]
build_mode = 1

[node name="L_ScoreP1" type="Label" parent="."]
margin_left = 28.0316
margin_top = 666.085
margin_right = 68.0316
margin_bottom = 680.085
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_ScoreP2" type="Label" parent="."]
margin_left = 29.3665
margin_top = 52.0587
margin_right = 69.3665
margin_bottom = 66.0587
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_Timer" type="Label" parent="."]
margin_left = 248.28
margin_top = 349.728
margin_right = 288.28
margin_bottom = 363.728
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="win" from="Balle" to="." method="_on_Balle_win"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
